<resources>
    <!--APP的应用名称-->
    <string name="app_name">Alice</string>

    <!--Activity组件描述-->
    <string name="activity_description_main">首页</string>
    <string name="activity_description_ItemNewsDetail">新闻详情页</string>
    <string name="activity_description_SearchNews">搜索新闻页</string>
    <string name="activity_description_RealTimeHotSpotRanking">实时热点页</string>
    <string name="activity_description_MovieDetails">电影详情页</string>
    <string name="activity_description_ItemTextJokeContent">文本笑话内容页</string>
    <string name="activity_description_QueryPhoneNumber">查询手机号码归属地页</string>
    <string name="activity_description_WallpaperHorizontalPageActivity">必应壁纸横向滑动页</string>
    <string name="activity_description_WallpaperVerticalPageActivity">必应壁纸垂直滑动页</string>
    <string name="activity_description_BingWallpaperListActivity">必应壁纸列表滑动页</string>
    <string name="activity_description_IntelligentChatRobot">智能机器人聊天界面页</string>
    <string name="activity_description_GraphicJokes">生活趣图页</string>
    <string name="activity_description_InspirationalQuotations">英文励志语录页</string>
    <string name="activity_description_CorpusOfIdioms">成语大全页</string>
    <string name="activity_description_TaoModels">淘宝模特页</string>
    <string name="activity_description_TestWidget">测试控件专区页</string>
    <string name="activity_description_Container">Fragment容器页</string>
    <string name="activity_description_weather">中国天气预报</string>
    <string name="activity_description_city_management">天气预报城市管理</string>
    <string name="activity_description_city_search">天气预报搜索城市</string>
    <string name="activity_description_seven_day_weather">天气预报七日天气</string>


    <!--菜单名称-->
    <string name="title_1">新闻</string>
    <string name="title_2">电影</string>
    <string name="title_3">视频</string>
    <string name="title_4">更多</string>

    <string name="menu_item_1">缩小页面</string>
    <string name="menu_item_2">深度页面</string>


    <!--Tab标题-->
    <!--新闻模块-->
    <string name="tab_title_1">头条</string>
    <string name="tab_title_2">新闻</string>
    <string name="tab_title_3">国内</string>
    <string name="tab_title_4">国际</string>
    <string name="tab_title_5">政治</string>
    <string name="tab_title_6">财经</string>
    <string name="tab_title_7">体育</string>
    <string name="tab_title_8">娱乐</string>
    <string name="tab_title_9">军事</string>
    <string name="tab_title_10">教育</string>
    <string name="tab_title_11">科技</string>
    <string name="tab_title_12">NBA</string>
    <string name="tab_title_13">股票</string>
    <string name="tab_title_14">星座</string>
    <string name="tab_title_15">女性</string>
    <string name="tab_title_16">健康</string>
    <string name="tab_title_17">育儿</string>
    <!--淘女郎模块-->
    <string name="style_tab_title_1">欧美</string>
    <string name="style_tab_title_2">韩版</string>
    <string name="style_tab_title_3">日系</string>
    <string name="style_tab_title_4">英伦</string>
    <string name="style_tab_title_5">OL风</string>
    <string name="style_tab_title_6">学院</string>
    <string name="style_tab_title_7">淑女</string>
    <string name="style_tab_title_8">性感</string>
    <string name="style_tab_title_9">复古</string>
    <string name="style_tab_title_10">街头</string>
    <string name="style_tab_title_11">休闲</string>
    <string name="style_tab_title_12">民族</string>
    <string name="style_tab_title_13">甜美</string>
    <string name="style_tab_title_14">运动</string>
    <string name="style_tab_title_15">可爱</string>
    <string name="style_tab_title_16">大码</string>
    <string name="style_tab_title_17">中老年</string>
    <string name="style_tab_title_18">其他</string>

    <string name="navigation_b_tab_title_1">豆瓣电影</string>
    <string name="navigation_b_tab_title_2">图书</string>
    <string name="navigation_b_tab_title_3">音乐</string>

    <string name="activity_graphic_joke_tab_label_1">动态图</string>
    <string name="activity_graphic_joke_tab_label_2">图片</string>
    <string name="activity_graphic_joke_tab_label_3">文本</string>

    <string name="navigation_d_idiom_tab_title_1">成语查注释</string>
    <string name="navigation_d_idiom_tab_title_2">关键字查成语</string>

    <!--xml控件内容描述  比如图像视图-->
    <string name="contentDescription_1">这是一个图片，点击进入热点排行</string>

    <!--对话框-->
    <string name="AlertDialog_Tips_Title">开发者提示</string>
    <string name="AlertDialog_Tips_Content">当前已浏览至第10页共200条数据，若要继续浏览更多内容，请前往分页筛选。</string>
    <string name="AlertDialog_Tips_Content_1">当前已浏览至第20页共400条数据，若要继续浏览更多内容，请前往分页筛选。</string>
    <string name="AlertDialog_Tips_Content_2">当前已浏览至第30页共600条数据，若要继续浏览更多内容，请前往分页筛选。</string>
    <string name="AlertDialog_Tips_Content_3">当前已浏览至第40页共800条数据，若要继续浏览更多内容，请前往分页筛选。</string>
    <string name="AlertDialog_Tips_Content_4">当前已浏览至第50页共1000条数据，若要继续浏览更多内容，请前往分页筛选。</string>
    <string name="AlertDialog_Tips_ErrorPrompt">开发者在测试数据源头时，发现部分风格类型最后一页的倒数几条数据会出现缺失图片作品集信息的现象，
        综合考虑到用户体验与每一位淘女郎都值得展示魅力，不对这些缺失信息的数据做任何处理。
        如果用户遇到这些数据在点击淘女郎大图查看作品集时APP出现闪退情况，实属正常，无须担心。(2020-1-14)</string>
    <string name="AlertDialog_Tips_Positive">确定</string>
    <string name="AlertDialog_Tips_Understood">已知晓</string>

    <!--页面-->
    <string name="newsTitle">新闻详情</string>
    <string name="textJoke">文本笑话</string>
    <string name="search_news">点击此处搜索你想了解的新闻</string>
    <string name="search_movies">点击此处搜索你想了解的电影</string>
    <string name="search_news_key_word">在此处输入关键词</string>
    <string name="tips_input_MobilePhoneNumber">在此处输入手机号码</string>
    <string name="tips_input_idiom">在此处输入成语</string>
    <string name="tips_input_chat">在此处输入聊天信息</string>
    <string name="tips_input_idiom_keyword">在此处输入关键字</string>
    <string name="real_time_hotspot">实时热点</string>
    <string name="real_time_box_office">实时票房</string>
    <string name="lately_wallpaper">滑动样式</string>
    <string name="more">筛选</string>
    <string name="search">搜索</string>
    <string name="send">发送</string>
    <string name="query">查询</string>
    <string name="real_time_hot_spot">实时热点</string>
    <string name="nc_title">开心一点</string>
    <string name="nd_title">精彩实用</string>
    <string name="query_mobilePhoneNumber_home">手机号码归属地查询</string>
    <string name="inspirationalQuotations_in_English">英文励志语录</string>
    <string name="corpus_of_idioms">成语大全</string>
    <string name="bing_daily_wallpaper">必应精选壁纸</string>
    <string name="bing_lately_wallpaper">必应一周精选壁纸</string>
    <string name="search_for_Tao_girls">淘女郎模特查询</string>
    <string name="fragment_my_joke_text">生活趣图</string>
    <string name="intelligent_chat_robot">智能聊天机器人菲菲</string>
    <string name="demo_weather">中国天气预报</string>
    <string name="icr_fei">菲菲</string>
    <string name="mobilePhoneNumber">手机号:</string>
    <string name="place_of_ownership">归属地:</string>
    <string name="operator">运营商:</string>
    <string name="cardType">卡类型:</string>
    <string name="areaCode">区域号:</string>
    <string name="idiom_title">成语名称:</string>
    <string name="idiom_spell">拼写读音:</string>
    <string name="idiom_content">解释:</string>
    <string name="idiom_derivation">出自典故:</string>
    <string name="idiom_samples">例子:</string>
    <string name="refreshStoreHouseHeaderTitle">English Quotations</string>


    <string name="movie">电影</string>


    <string name="test_movie_introduction">基宇（崔宇植 饰）出生在一个贫穷的家庭之中，和妹妹基婷（朴素丹 饰）以及父母在狭窄的地下室里过着相依为命的日子。一天，基宇的同学上门拜访，他告诉基宇，自己在一个有钱人家里给他们的女儿做家教，太太是一个头脑简单出手又阔绰的女人，因为自己要出国留学，所以将家教的职位暂时转交给基宇。</string>

    <!-- android:contentDescription
  定义简要描述视图内容的文本。 此属性主要用于可访问性。
  由于某些视图没有文字表示，因此可以使用此属性来提供 -->

    <!-- contentDescription 内容描述 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_arrow_back">这是返回箭头</string>
    <string name="description_image">这是张图片</string>
    <string name="description_weather_bg">这是天气背景颜色</string>
    <string name="description_add_button">这是进入选择添加城市天气页面的按钮</string>
    <string name="description_share_button">这是分享天气的按钮</string>
    <string name="description_add_to_city_management">这是将当前城市天气添加到城市管理的按钮</string>


    <!-- 天气-->
    <string name="mark_temperature">℃</string>
    <string name="air_pressure">气压</string>
    <string name="somatosensory">体感</string>
    <string name="humidity">湿度</string>
    <string name="page_title_city_management">城市管理</string>
    <string name="search_city">搜索全国天气</string>
    <string name="cancel">取消</string>
    <string name="hot_city">热门城市</string>
    <string name="add_city">添加到主页</string>
    <string name="go_hone">前往主页查看</string>



</resources>
