<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_map"
    app:startDestination="@id/navigation_1">


    <fragment
        android:id="@+id/navigation_1"
        android:name="com.uw.alice.ui.fragment.NewsHomeFragment"
        android:label="@string/title_1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_2"
        android:name="com.uw.alice.ui.fragment.MovieHomeFragment"
        android:label="@string/title_2"
        tools:layout="@layout/fragment__movie_home" />

    <fragment
        android:id="@+id/navigation_3"
        android:name="com.uw.alice.ui.fragment.NotificationsFragment"
        android:label="@string/title_3"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_4"
        android:name="com.uw.alice.ui.others.MyFragment"
        android:label="@string/title_4"
        tools:layout="@layout/fragment_my" />



</navigation>