<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tool:context=".ui.fragment.NewsHomeFragment">

        <LinearLayout
            android:id="@+id/rl_search_box"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorNavigationA"
            app:layout_constraintTop_toTopOf="parent"
            tool:ignore="DisableBaselineAlignment">


            <LinearLayout
                android:id="@+id/ll_search_box"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical"
                android:background="@drawable/search_box_background">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:background="@mipmap/search"
                    tool:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/search_news"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_hotdotRank"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/contentDescription_1"
                    android:background="@mipmap/hotspot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real_time_hotspot"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    tool:ignore="SmallSp" />


            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/rl_search_box"
            app:tabMode="scrollable"
            app:tabRippleColor="@color/transparent"
            app:tabIndicatorFullWidth="false"
            app:tabMaxWidth="58dp"
            app:tabSelectedTextColor="@color/colorNavigationA"
            app:tabIndicatorColor="@color/colorNavigationA"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>