<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View.OnClickListener"/>
        <variable
            name="onClickListener"
            type="OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.modular.idiom.fragment.IdiomAnnotationFragment">


        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/ll_search_box"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/search_box_background_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:background="@mipmap/search"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/et_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/tips_input_idiom"
                    android:maxLength="20"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="14sp"
                    tools:ignore="Autofill,NestedWeights,TextFields" />

                <LinearLayout
                    android:id="@+id/ll_reset"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="@{onClickListener}">

                    <ImageView
                        android:id="@+id/iv_reset"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@mipmap/reset"
                        tools:ignore="ContentDescription"
                        android:onClick="@{onClickListener}"
                        android:visibility="gone"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:onClick="@{onClickListener}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_title"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/idiom_title" />

                            <TextView
                                android:id="@+id/tv_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:text="爱屋及乌" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/idiom_spell" />

                            <TextView
                                android:id="@+id/tv_spell"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:text="ai" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/idiom_content" />

                            <TextView
                                android:id="@+id/tv_content"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:text="这是解释" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/idiom_derivation" />

                            <TextView
                                android:id="@+id/tv_derivation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:text="这是出处" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/idiom_samples" />

                            <TextView
                                android:id="@+id/tv_samples"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:text="举例造句" />

                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </ScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>